--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,8 +8,10 @@ book:
   cover-image: shiny.png
   chapters:
     - index.qmd
-    - placeholder1.qmd
-    - placeholder2.qmd
+    - greaves.qmd
+    - interview.qmd
+    - totalcare.qmd
+    - measuring.qmd
 
 format:
   html:
